--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+cloudinary==1.43.0
 Django==5.1.7
 django-anymail==12.0
+django-cloudinary-storage==0.3.0
 django-environ==0.12.0
 djangorestframework==3.15.2
 gunicorn==23.0.0
@@ -11,6 +13,7 @@ packaging==24.2
 pillow==11.1.0
 psycopg2==2.9.10
 requests==2.32.3
+six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.1
 urllib3==2.3.0
